<resources>
    //Firebase Notification Topic
    <string name="topics">fpad</string>
    <string name="default_notification_channel_id">default</string>

    //Default Apps
    <string name="app_name">Fpad</string>
    <string name="action_settings">Settings</string>
    <string name="login_button">Start Reading</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="signup_button">Don\'t have an account? Sign up</string>
    <string name="create_account">Create account?</string>
    <string name="already_member">Already a member? Login</string>
    <string name="forgot_hint">Enter your email</string>
    <string name="forgot_builder_header">Forgot password</string>
    <string name="forgot_builder_submit">Send password</string>
    <string name="facebook_button">Facebook</string>
    <string name="google_button">Google</string>
    <string name="facebook_app_id">2065763930311923</string>
    <string name="fb_login_protocol_scheme">fb2065763930311923</string>
    <string name="default_last_update">Last Updated:  </string>
    <string name="loading">Loading&#8230;</string>
    <string name="view">View as Reader</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="notif_vote_owner">Creator is not willing to vote</string>
    <string name="comment_title">Comments</string>
    <string name="placeholder_post_comment">Post a comment&#8230;</string>
    <string name="error_post_comment">Please check your comments before posting!</string>
    <string name="notif_draft_comment">Drafts Mode: Please publish your story first!</string>
    <string name="button_continue">Continue</string>
    <string name="button_read">Read</string>
    <string name="waiting_approval">Waiting Approval</string>
    <string name="approved">Story Approved</string>
    <string name="reading_list">Reading List</string>
    <string name="create_title_profile">Profile</string>

    //Settings
    <string name="account_setting">Account Setting</string>
    <string name="about">About This App</string>
    <string name="preferred">Preferred Stories</string>
    <string name="language">Language</string>
    <string name="other">Other</string>
    <string name="application_setting">Application Setting</string>
    <string name="logout">Logout</string>
    <string name="save_dialog">Save</string>
    <string name="close_dialog">Close</string>
    <string name="username">username</string>
    <string name="change_language">Change Language</string>
    <string name="change_gender">Change Gender</string>
    <string name="change_username">Change Username</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="retype_password">Retype Password</string>
    <string name="old_password_error">Error</string>
    <string name="new_password_error">Please recheck your new password and retype</string>
    <string name="fullname">fullname</string>
    <string name="change_fullname">Change Fullname</string>
    <string name="create_title_settings">Account Setting</string>
    <string name="main_title_settings">Setting</string>
    //Delete Stories
    <string name="delete_header_builder">Delete Story</string>
    <string name="delete_body_builder">You chose to delete this story. Are you sure about this action?</string>
    <string name="deleteprogress">Deleting&#8230;</string>

    //Edit Stories
    <string name="create_title_activity">Edit Story</string>
    <string name="new_story_button">NEW STORY</string>
    <string name="default_no_title_drafts">Default Title - Write Your Story</string>
    <string name="published_tab_title">PUBLISHED</string>
    <string name="drafts_tab_title">DRAFTS</string>
    <string name="edit_header_builder">Edit Story</string>
    <string name="edit_body_builder">You have not got your story yet and you will lose the title and description of this story. Are you sure you want to quit?</string>

    //Library Stories
    <string name="library_title_activity">Library</string>
    <string name="readinglists_tab_title">Reading Lists</string>


    //Action Bar
    <string name="simpan">Save</string>
    <string name="publish">Publish</string>



   //Add New Story
    <string name="title_activity">Add New Story</string>
    <string name="loadingprogress">Saving&#8230;</string>
    <string name="header_builder">Create Story</string>
    <string name="body_builder">You have not got your story yet and you will lose the title and description of this story. Are you sure you want to quit?</string>
    <string name="yes_builder">Yes</string>
    <string name="no_builder">No</string>
    <string name="ok_builder">OK</string>
    <string name="header_kategori_builder">Choose Category</string>
        //Editor
        <string name="title">Story Title</string>
        <string name="description">Story Description</string>
        <string name="kategori">Category</string>
        <string name="sub_kategori">Choose Category</string>
        <string name="editor_hint">Write Your Content Story Here&#8230;</string>
    <string name="errorviewtext">Data Error</string>


</resources>
