<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    android:background="@color/background_edit"
    tools:context=".ui.LoginActivity">

    <LinearLayout
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="56dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">
        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"
            android:src="@drawable/wattpad_logo" />
        <LinearLayout
            android:layout_below="@+id/linear1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/facebookView"
                android:layout_width="0dp"
                android:layout_weight ="1"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:backgroundTint="#3b5998"
                android:background="@drawable/button_background"
                android:gravity="center"
                android:textSize="18sp"
                android:onClick="fbLogin"
                android:textAppearance="?android:textAppearanceSmall"
                android:textStyle="bold"
                android:text="@string/facebook_button"
                android:textColor="@color/white" />
            <TextView
                android:layout_width="0dp"
                android:layout_weight ="0.2"
                android:layout_height="wrap_content"
                android:gravity="center"/>
            <Button
                android:id="@+id/googleView"
                android:layout_width="0dp"
                android:layout_weight ="1"
                android:layout_height="wrap_content"
                android:onClick="googleLogin"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/button_background"
                android:gravity="center"
                android:textSize="18sp"
                android:textAppearance="?android:textAppearanceSmall"
                android:textStyle="bold"
                android:text="@string/google_button"
                android:textColor="@color/secondary_text" />

        </LinearLayout>


        <!--  Email Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:textColorHint="@color/secondary_text"
            app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
            >
            <EditText android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textColor="@color/primary_text"
                android:hint="Email" />
        </android.support.design.widget.TextInputLayout>

        <!--  Password Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColorHint="@color/secondary_text"
            app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/primary_text"
                android:hint="Password"/>
        </android.support.design.widget.TextInputLayout>

        <TextView android:id="@+id/link_forgot"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_orange_light"
            android:text="@string/forgot_password"
            android:gravity="center"
            android:textSize="16sp"/>
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:textColor="@color/white"
            android:background="@android:color/holo_orange_dark"
            android:padding="12dp"
            android:text="@string/login_button"/>


        <TextView
            android:id="@+id/btnEmail"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_orange_light"
            android:text="@string/signup_button"
            android:gravity="center"
            android:textSize="16sp"/>



        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_google"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:gravity="center"
            android:visibility="gone" />
        <com.facebook.login.widget.LoginButton
            android:id="@+id/sign_in_facebook"
            android:layout_width="0dp"
            android:layout_weight ="1"
            android:layout_height="0dp"
            android:gravity="center"
            android:visibility="gone"/>

    </LinearLayout>
</ScrollView>