<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.stories.AddStoryActivity"
    tools:showIn="@layout/activity_addstory" >



    <ScrollView
        android:layout_above="@id/tools"
        android:fillViewport="true"
        android:layout_width="match_parent"
        android:scrollbars="vertical"
        android:layout_marginBottom="40dp"
        android:layout_alignParentTop="true"
        android:layout_height="match_parent"
        >

    <LinearLayout
        android:id="@+id/linear1"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >



        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">
            <!-- Title Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp">
                <EditText android:id="@+id/input_title"
                    android:focusable="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/primary_text"
                    android:textColorHint="@color/primary_text"
                    android:textColorHighlight="@color/primary_text"
                    android:inputType="textPersonName"
                    android:hint="@string/title"/>
            </android.support.design.widget.TextInputLayout>
            <!-- Description Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp">
                <EditText android:id="@+id/input_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/primary_text"
                    android:textColorHint="@color/primary_text"
                    android:textColorHighlight="@color/primary_text"
                    android:inputType="textPersonName"
                    android:hint="@string/description"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp">
                <EditText android:id="@+id/var_kategori"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/primary_text"
                    android:textColorHint="@color/primary_text"
                    android:textColorHighlight="@color/primary_text"
                    android:text="@string/sub_kategori"
                    android:hint="@string/kategori"
                    android:focusable="false"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp">

                <com.scrat.app.richtext.RichEditText
                    android:id="@+id/editor"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:gravity="top|start"
                    android:paddingEnd="16dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingStart="16dp"
                    android:paddingTop="16dp"
                    android:paddingBottom="120dp"
                    android:scrollbars="vertical"
                    app:bulletColor="#FF2196F3"
                    app:bulletGapWidth="8dp"
                    app:bulletRadius="2dp"
                    app:historyEnable="true"
                    app:historySize="99"
                    app:linkColor="#FF2196F3"
                    app:linkUnderline="true"
                    app:quoteCapWidth="2dp"
                    app:quoteColor="#FF2196F3"
                    app:quoteStripeWidth="8dp"
                    android:hint="@string/editor_hint"
                    />
            </android.support.design.widget.TextInputLayout>


            <EditText android:id="@+id/input_kategori"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/primary_text"
                android:textColorHint="@color/primary_text"
                android:textColorHighlight="@color/primary_text"
                android:text="0"
                android:visibility="invisible"/>

        </LinearLayout>
    </LinearLayout>



</ScrollView>

    <HorizontalScrollView android:id="@+id/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#e6e6e6"
        android:layout_gravity="bottom"
        android:layout_alignParentBottom="true"
        android:scrollbars="none">
        <include
            layout="@layout/editor_tool" />
    </HorizontalScrollView>
</RelativeLayout>