<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context="com.android.fpad.ui.MainSettingsActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/warnaDark"
            app:popupTheme="@style/AppTheme.PopupOverlay" />



    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:orientation="vertical"
        android:fitsSystemWindows="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <RelativeLayout
            android:id="@+id/test"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginLeft="3dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:textColor="@color/primary_text"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/application_setting"
                android:ellipsize="marquee"
                android:fadingEdge="horizontal" />
        </RelativeLayout>
            <android.support.v7.widget.CardView
                android:layout_below="@+id/test"
                android:id="@+id/cardview1"
                android:onClick="account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/activity_horizontal_margin">
                    <TextView
                        android:id="@+id/account_setting"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/primary_text"
                        android:text="@string/account_setting"
                        android:ellipsize="marquee"
                        android:fadingEdge="horizontal" />

                </RelativeLayout>
            </android.support.v7.widget.CardView>
            <RelativeLayout
                android:id="@+id/prefered"
                android:layout_below="@+id/cardview1"
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_marginStart="3dp"
                android:layout_marginLeft="3dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:textColor="@color/primary_text"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/preferred"
                    android:ellipsize="marquee"
                    android:fadingEdge="horizontal" />
            </RelativeLayout>
            <android.support.v7.widget.CardView
                android:id="@+id/cardview2"
                android:layout_below="@+id/prefered"
                android:onClick="gantibahasa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/activity_horizontal_margin">
                    <TextView
                        android:id="@+id/language"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:textColor="@color/primary_text"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/language"
                        android:ellipsize="marquee"
                        android:fadingEdge="horizontal" />
                    <TextView
                        android:layout_below="@+id/language"
                        android:id="@+id/val_language"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/secondary_text"
                        android:text="Language"
                        android:ellipsize="marquee"
                        android:fadingEdge="horizontal" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>
            <RelativeLayout
                android:id="@+id/other"
                android:layout_below="@+id/cardview2"
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_marginStart="3dp"
                android:layout_marginLeft="3dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:textColor="@color/primary_text"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/other"
                    android:ellipsize="marquee"
                    android:fadingEdge="horizontal" />
            </RelativeLayout>
            <android.support.v7.widget.CardView
                android:id="@+id/cardview3"
                android:onClick="about"
                android:layout_below="@+id/other"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/activity_horizontal_margin">
                    <TextView
                        android:id="@+id/about"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:textColor="@color/primary_text"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/about"
                        android:ellipsize="marquee"
                        android:fadingEdge="horizontal" />

                </RelativeLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:id="@+id/cardview4"
                android:layout_below="@+id/cardview3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="logout"
                android:layout_margin="3dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/activity_horizontal_margin">
                    <TextView
                        android:id="@+id/logout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:textColor="@color/primary_text"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/logout"
                        android:ellipsize="marquee"
                        android:fadingEdge="horizontal" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>


        </RelativeLayout>

    </android.support.v4.widget.NestedScrollView>





    <android.support.design.widget.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_alignParentBottom="true"
        app:itemBackground="@drawable/background_bottomview"
        app:itemIconTint="@drawable/state_bottom_nv"
        app:itemTextColor="@drawable/state_bottom_nv"
        app:menu="@menu/bottom_navigation_items" />


</android.support.design.widget.CoordinatorLayout>
